# triton-server

./: .gitignore  ContainerFile  LICENSE  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
docs/: triton_server_model_deployment.md
in_process/python/: ContainerFile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
in_process/python/src/: api.py
in_process/python/src/common/api/: __init__.py  triton_server.py
in_process/python/src/common/settings/: __init__.py  app.py  log.py  triton_client.py
in_process/python/src/common/type/: __init__.py  tensor.py
in_process/python/src/core/api/triton_server/: __init__.py  base.py  factory.py  grpc_client.py  http_client.py
in_process/python/src/core/data/image/: utils.py
in_process/python/src/generate/presentation/: __init__.py  v1.py
in_process/python/src/generate/presentation/dto/: __init__.py  generate_chat.py  generate_embedding.py
in_process/python/src/model/presentation/: __init__.py  v1.py
in_process/python/src/model/presentation/dto/: __init__.py  get_inference_statistics.py  get_model_metadata.py  get_trace_settings.py  infer.py  stream_infer.py
in_process/python/src/repository/presentation/: __init__.py  v1.py
in_process/python/src/repository/presentation/dto/: __init__.py  get_model_repository_index.py  get_ready_model_list.py
in_process/python/src/server/presentation/: __init__.py  v1.py
in_process/python/src/server/presentation/dto/: __init__.py  get_log_settings.py  get_server_metadata.py  update_log_settings.py  update_trace_settings.py
(+51 files in other folders)
