[tool.poetry]
name = "triton_server"
version = "0.1.0"
description = "Nvidia Triton Inference Server for model serving."
authors = ["YeonHL <yeonholee.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.8.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
torch = "^2.5.1"
transformers = "^4.47.1"
accelerate = "^1.2.1"
tritonclient = {extras = ["all"], version = "^2.52.0"}
peft = "^0.14.0"
pillow = "^11.1.0"
opencv-python = "^4.11.0.86"
fastapi = {extras = ["standard"], version = "^0.115.12"}
jsonpickle = "^4.0.5"
python-json-logger = "^3.3.0"
orjson = "^3.10.16"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pyright = "^1.1.370"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
